@@ -1,3 +1,13 @@
+2009-07-07  Xerxes Rånby  <xerxes@zafena.se>
+
+	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp
+	Include llvm/LLVMContext.h used by getGlobalContext()
+	when llvm version are 2.6 or later.
+	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
+	(SharkCompiler::SharkCompiler): Pass the LLVMContext returned 
+	from getGlobalContext() to the new Module constructor
+	when llvm version are 2.6 or later to handle LLVM API change.
+
 2009-07-03  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/share/vm/shark/sharkEntry.hpp
